fellow_kids/nohup.out
Traceback (most recent call last):
  File "fellow_kids.py", line 156, in <module>
    @bon.command(name='laugh', help='demoman laughing')
NameError: name 'bon' is not defined
  File "fellow_kids.py", line 31
    async def die(ctx, arg):
        ^
SyntaxError: invalid syntax
